# TDD

./: Jenkinsfile  forgot_command  manage.py  package-lock.json  package.json  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
docker/: Dockerfile  forgot_command
functional_tests/: base.py  test_layout_and_styling.py  test_list_item_validation.py  test_simple_list_creation.py  tests.py
lists/: forms.py  models.py  tests.py  urls.py  views.py
lists/migrations/: 0001_initial.py  0002_item_text.py  0003_list.py  0004_item_list.py  0005_list_item_unique_together.py
lists/static/: list.js
lists/static/tests/: tests.html
lists/templates/: base.html
lists/tests/: test_forms.py  test_models.py  test_views.py
tdd/: settings.py  urls.py
test/: functional_term_tests.py  functional_tests.py  tests.py
test/functional_tests/: tests.py
test/unit_tests/: tests.py
