[metadata]
name = tdd
summary = tdd
description-file =
    README.rst
author = tdd
author-email = tdd@openstack.org
home-page = http://www.dt.org/
classifier =
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    tdd
data_files =
    etc/tdd = etc/tdd/*

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = tdd/locale
domain = tdd

[update_catalog]
domain = tdd
output_dir = tdd/locale
input_file = tdd/locale/tdd.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = tdd/locale/tdd.pot

[entry_points]
wsgi_scripts =
    tdd-api = tdd.api.app:build_wsgi_app

console_scripts =
    tdd = tdd:tdd

oslo.config.opts =
    tdd = tdd.opts:list_opts
    tdd-auth = tdd.opts:list_keystoneauth_opts

oslo.config.opts.defaults =
    tdd = tdd.conf.defaults:set_cors_middleware_defaults

[pbr]
warnerrors = true
autodoc_index_modules = true
autodoc_exclude_modules = tdd.db.sqlalchemy.alembic.*
